# Android-IDE-by-Replit.-

./: README.md
.github/workflows/: main.yml
android-ide-native/: TOOLCHAIN_BUNDLING.md  gradle.properties  gradlew  settings.gradle.kts
android-ide-native/app/: build.gradle.kts  proguard-rules.pro
android-ide-native/app/src/main/: AndroidManifest.xml
android-ide-native/app/src/main/cpp/: CMakeLists.txt  file_utils.cpp  file_utils.h  jni_bridge.cpp  native_executor.cpp  native_executor.h  tool_wrapper.cpp  tool_wrapper.h
android-ide-native/app/src/main/kotlin/com/androidide/: AndroidIDEApplication.kt  MainActivity.kt
android-ide-native/app/src/main/kotlin/com/androidide/engine/: ApkAnalyzer.kt  ApkPackager.kt  BuildPipelineEngine.kt  CompilerEngine.kt  LogcatService.kt  NdkBuildEngine.kt  SearchEngine.kt  TerminalEngine.kt
android-ide-native/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android-ide-native/gradle/: libs.versions.toml
artifacts/android-ide/: app.json  package.json
artifacts/android-ide/.replit-artifact/: artifact.toml
artifacts/android-ide/app/: _layout.tsx
artifacts/android-ide/app/(editor)/: _layout.tsx  build.tsx  debugger.tsx  devices.tsx  editor.tsx  logcat.tsx  package.tsx  settings.tsx  terminal.tsx
artifacts/android-ide/app/(tabs)/: _layout.tsx  index.tsx
artifacts/android-ide/components/: BuildLogView.tsx  FileTree.tsx  SyntaxHighlighter.tsx  TerminalView.tsx
artifacts/android-ide/constants/: colors.ts
artifacts/android-ide/context/: AppContext.tsx  BuildContext.tsx
(+14 files in other folders)
